kubernetes/apps/networking/traefik/catch/replace-path.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: catch-replace-path
  namespace: networking
spec:
  replacePath:
    path: /
