kubernetes/apps/networking/traefik/catch/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: catch
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${DOMAIN}`) || HostRegexp(`{subdomain:.+}.${DOMAIN}`)
      priority: 1
      middlewares:
        - name: catch-replace-path
          namespace: networking
      services:
        - kind: Service
          name: error-pages
          namespace: networking
          port: 8080
  tls:
    domains:
      - main: "*.${DOMAIN}"
